Changes for 1.8.5rc1

 - [ZBX-2825] Make profiles form redirect to the last visited page on save or cancel (Vlad)
 - [ZBX-3383] fixed error in audit log when filter by Macro or Template (Vedmak)
 - [ZBX-3378] updated Russian translation; thanks to dotneft and zalex_ua (Richlv)
 - [ZBX-3350] fixed minor interface bug and it is now not possible to add host name longer then 64 chars (KB)
 - [ZBX-3341] fixed host export - valuemap property is now exported as expected (KB)
 - [ZBX-3338] updated Ukrainian translation; thanks to zalex_ua (Richlv)
 - [ZBX-954] fix minor typos (Richlv)
 - [ZBX-1419] don't print an informative message during upgrade if no orphan hosts were found (Richlv)

Changes for 1.8.4

1.8.4rc4 was released as 1.8.4 without any changes

Changes for 1.8.4rc4

 - [ZBX-3351] fixed broken support of 1.4.x style configuration file format for WEB interface (Vedmak)

Changes for 1.8.4rc3

 - [ZBX-3256] added automatic detection of fping command line option to use for specifying source IP address (asaveljevs)
 - [ZBX-3333] fixed icmppingloss[] returning bad values when NIC bonding is used (asaveljevs)
 - [ZBX-1985,ZBX-2394] fixed icmppingloss[] returning bad values when fping is capable of pinging both address families (asaveljevs)
 - [ZBX-2825] fix after saving the profile it stays in the profile page (Vlad)
 - [ZBX-1294] disabled GUI interface action elements for editing a templated trigger
 - [ZBX-3306] fixed minimal value limit for action escalation period (Vedmak)
 - [ZBX-3320] fixed host.create, template.create permission error for admin users (Vedmak)
 - [ZBX-266] made debugging output for Web scenarios more useful (Sasha)
 - [ZBX-1181] fixed infinite looping when failing cURL initialization and showing of such errors in the GUI (asaveljevs,Sasha,Vedmak)
 - [ZBX-1181] fixed download speed, response time, and response code not being saved for failed Web scenario steps (asaveljevs)